--- a/task_3_01/index.html
+++ b/task_3_01/index.html
@@ -1,90 +1,47 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Task_3_01</title>
     <link rel="stylesheet" href="assets/css/main.css">
-    <title>Task 1</title>
 </head>
 <body>
-
-<!--    <div id="app">-->
-<!--        <div class="wrapper">-->
-<!--            <h3>Form Validation</h3>-->
-<!--            <form action="" @submit.prevent="submitHandler">-->
-<!--                <label for="firstname">Firstname</label>-->
-<!--                <input type="text" id="firstname" v-model.trim="firstName" :class="{invalid: ($v.firstName.$dirty && !$v.firstName.required)}">-->
-
-<!--                <label for="lastname">Lastname</label>-->
-<!--                <input type="text" id="lastname" v-model.trim="lastName">-->
-
-<!--                <label for="male">Male</label>-->
-<!--                <input type="radio" id="male" value="male">-->
-
-<!--                <label for="female">Female</label>-->
-<!--                <input type="radio" id="female" value="female">-->
-
-<!--                <label for="phone">Phone</label>-->
-<!--                <input type="text" id="phone">-->
-
-<!--                <label for="nickname">Nickname</label>-->
-<!--                <input type="text" id="nickname">-->
-
-<!--                <button type="submit">Submit</button>-->
-<!--            </form>-->
-<!--        </div>-->
-<!--    </div>-->
-
-<div id="app" class="row">
-    <form id="form" method="post" class="col s12" @submit.prevent="submit">
-
-        <!-- Input 'FirstName' -->
-        <div class="row">
-            <div class="form-group input-field col s12" :class="{ 'form-group--error': $v.firstName.$error }">
-                <input type="text" id="firstName" v-model.trim="firstName" :class="{ error: $v.firstName.$error }" @input="$v.firstName.$touch" class="form__input" />
-                <label for="firstName" class="form__label">firstName</label>
+<div id="app">
+    <div class="app-container" :style="{'background': bgColor}">
+        <form>
+            <div class="input-group">
+                <input type="text" name="firstName" @input="checkFirstName" v-model="firstName" placeholder="First Name">
             </div>
 
-            <div v-if="$v.firstName.$dirty">
-                <span class="error" v-if="!$v.firstName.required">firstName is required</span>
-                <span class="error" v-if="!$v.firstName.minLength">firstName must have at least {{$v.firstName.$params.minLength.min}} letters.</span>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="form-group input-field col s12" :class="{ 'form-group--error': $v.lastName.$error }">
-                <input type="text" id="lastName" v-model.trim="lastName" :class="{ error: $v.lastName.$error }" @input="$v.lastName.$touch" class="form__input" />
-                <label for="lastName" class="form__label">First Name</label>
+            <div class="input-group">
+                <input type="text" name="lastName" @input="checkLastName" v-model="lastName" placeholder="Last Name">
             </div>
 
-            <div v-if="$v.lastName.$dirty">
-                <span class="error" v-if="!$v.lastName.required">Last Name is required</span>
-                <span class="error" v-if="!$v.lastName.minLength">Name must have at least {{$v.lastName.$params.minLength.min}} letters.</span>
+            <div class="input-group">
+                <input type="radio" name="gender" id="male" value="male" v-model="checkGender">
+                <label for="male">Male</label>
             </div>
-        </div>
 
-        <div class="row">
-            <label :style="{ 'background': bg }">
-                <input class="form__input" type="radio" name="form-gender" value="male" v-model="gender" @click="genderWatch" @change="$v.gender.$touch;">Man
-            </label>
-            <label  :style="{ 'background': bg }">
-                <input class="form__input" type="radio" name="form-gender" value="female" v-model="gender" @click="genderWatch" @change="$v.gender.$touch;">Woman
-            </label>
-        </div>
+            <div class="input-group">
+                <input type="radio" name="gender" id="female" value="female" v-model="checkGender">
+                <label for="female">Female</label>
+            </div>
 
-        <div class="row">
-            <button :disabled="$v.$invalid" type="submit" class="purple lighten-2 z-depth-0 btn btn_submit">Submit</button>
-        </div>
-    </form>
+            <div class="input-group">
+                <input type="text" name="phone" @input="checkPhone" v-model="phone" placeholder="Phone">
+            </div>
 
+            <div class="input-group">
+                <input type="text" name="nickName" @input="checkNickName" v-model="nickName" placeholder="Nick Name">
+            </div>
+        </form>
+    </div>
 </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.11/vue.min.js"></script>
-    <script src="https://unpkg.com/vuelidate/dist/vuelidate.min.js"></script>
-    <script src="https://unpkg.com/vuelidate/dist/validators.min.js"></script>
-    <script src="assets/js/main.js"></script>
+<script src="https://unpkg.com/vue@3"></script>
+<script src="assets/js/main.js"></script>
+
 </body>
 </html>
